--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0"
+  },
+  "engines": {
+    "node": "~20.17.0"
   }
 }
